// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders confirmation 1`] = `
<ConfirmationContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  contactEmail="ttoe@squirrelzone.net"
  orderId="123-456-7"
/>
`;

exports[`rendering renders payment 1`] = `
<PaymentContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  order={
    Order {
      "idempotencyKey": null,
      "info": Object {
        "billingAddress1": "",
        "billingAddress2": "",
        "billingAddressSameAsShippingAddress": true,
        "billingCity": "",
        "billingState": "MA",
        "billingZip": "",
        "cardFunding": "unknown",
        "cardLast4": "",
        "cardToken": null,
        "cardholderName": "",
        "contactEmail": "",
        "contactName": "",
        "contactPhone": "",
        "shippingAddress1": "",
        "shippingAddress2": "",
        "shippingCity": "",
        "shippingCompanyName": "",
        "shippingName": "",
        "shippingState": "MA",
        "shippingZip": "",
        "storeBilling": false,
        "storeContactAndShipping": false,
      },
      "localStorageAvailable": true,
      "processing": false,
      "updateStorageDisposer": null,
    }
  }
  stripe={null}
  submit={[Function]}
/>
`;

exports[`rendering renders review 1`] = `
<ReviewContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  order={
    Order {
      "idempotencyKey": null,
      "info": Object {
        "billingAddress1": "",
        "billingAddress2": "",
        "billingAddressSameAsShippingAddress": true,
        "billingCity": "",
        "billingState": "MA",
        "billingZip": "",
        "cardFunding": "unknown",
        "cardLast4": "",
        "cardToken": null,
        "cardholderName": "",
        "contactEmail": "",
        "contactName": "",
        "contactPhone": "",
        "shippingAddress1": "",
        "shippingAddress2": "",
        "shippingCity": "",
        "shippingCompanyName": "",
        "shippingName": "",
        "shippingState": "MA",
        "shippingZip": "",
        "storeBilling": false,
        "storeContactAndShipping": false,
      },
      "localStorageAvailable": true,
      "processing": false,
      "updateStorageDisposer": null,
    }
  }
  submit={[Function]}
/>
`;

exports[`rendering renders shipping 1`] = `
<ShippingContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  order={
    Order {
      "idempotencyKey": null,
      "info": Object {
        "billingAddress1": "",
        "billingAddress2": "",
        "billingAddressSameAsShippingAddress": true,
        "billingCity": "",
        "billingState": "MA",
        "billingZip": "",
        "cardFunding": "unknown",
        "cardLast4": "",
        "cardToken": null,
        "cardholderName": "",
        "contactEmail": "",
        "contactName": "",
        "contactPhone": "",
        "shippingAddress1": "",
        "shippingAddress2": "",
        "shippingCity": "",
        "shippingCompanyName": "",
        "shippingName": "",
        "shippingState": "MA",
        "shippingZip": "",
        "storeBilling": false,
        "storeContactAndShipping": false,
      },
      "localStorageAvailable": true,
      "processing": false,
      "updateStorageDisposer": null,
    }
  }
  submit={[Function]}
/>
`;
